--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     </head>
     <body>
         <h1>
+            ぬほれ
+        </h1>
 
         <br>
             
-        <p>
-            
-        </p>
+        <p>　理学部数学科に通っている大学生（B1）です.</p>
     </body>
 </html>
