--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
         <br>
             
-        <p>　理学部数学科に通っている大学生（B1）です.</p>
+        <p>　理学部数学科に通っている大学生（B1）です. 数学や音楽, 漫画, アニメ, にじさんじが好きです.</p>
     </body>
 </html>
