--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
         <br>
             
         <p>　理学部数学科に通っている大学生（B1）です. 数学や音楽, 漫画, アニメ, にじさんじなどが好きです.</p>
+
+        <img src = "XJ7FNhDj_400x400.jpg">
+        
+        <br>
+
+        <p>Gmail: nuhore191@gmail.comかfumowe@gmail.com</p>
+        <p></p>
     </body>
 </html>
