--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
         </h1>
 
         <br>
-            
-        <p>　理学部数学科に通っている大学生（B1）です. 数学や音楽, 漫画, アニメ, にじさんじなどが好きです.</p>
 
-        <img src = "XJ7FNhDj_400x400.jpg">
+        <table width = 100%>
+
+            <tr>
         
+                <td width = 50%>　理学部数学科に通っている大学生（B1）です. 数学や音楽, 漫画, アニメ, にじさんじなどが好きです.</td>
+
+                <td><img src = "XJ7FNhDj_400x400.jpg"></td>
+
+            </tr>
+
+        </table>
         <br>
 
         <p>Gmail: nuhore191@gmail.comかfumowe@gmail.com</p>
