--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
                 <td width = 50%>　理学部数学科に通っている大学生（B1）です. 数学や音楽, 漫画, アニメ, にじさんじなどが好きです.</td>
 
-                <td><img src = "XJ7FNhDj_400x400.jpg"></td>
+                <td><img src = "XJ7FNhDj_400x400.jpg" width =40%></td>
 
             </tr>
 
