--- a/index.html
+++ b/index.html
@@ -11,17 +11,10 @@
 
         <br>
 
-        <table width = 100%>
-
-            <tr>
+        <img src = "XJ7FNhDj_400x400.jpg" width =20%>
         
-                <td width = 50%>　理学部数学科に通っている大学生（B1）です. 数学や音楽, 漫画, アニメ, にじさんじなどが好きです.</td>
-
-                <td><img src = "XJ7FNhDj_400x400.jpg" width =40%></td>
-
-            </tr>
-
-        </table>
+        <p>　理学部数学科に通っている大学生（B1）です. 数学や音楽, 漫画, アニメ, にじさんじなどが好きです.</p>
+        
         <br>
 
         <p>Gmail: nuhore191@gmail.comかfumowe@gmail.com</p>
