--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
         <br>
 
-        <p>Gmail: nuhore191@gmail.comかfumowe@gmail.com</p>
-        <p></p>
+        <h3>リンク</h3>
+        <p><a href="mailto:nuhore191@gmail.com?">Gmail</a></p>
     </body>
 </html>
