--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <br>
 
         <h3>リンク</h3>
-        <p><a href="mailto:nuhore191@gmail.com?">Gmail</a></p>
+        <p>Gmail: nuhore191@gmail.com</p>
+        <p>Twitter: <a href="https://x.com/nuhore191">数学アカウント</a></p>
     </body>
 </html>
