--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <h3>リンク</h3>
         <p>Gmail: nuhore191@gmail.com</p>
-        <p>Twitter: <a href="https://x.com/nuhore191">メインのアカウント</a>, <a href="https://x.com/fumowe5">サブアカウント</p>
+        <p>Twitter: <a href="https://x.com/nuhore191">メインのアカウント</a>, <a href="https://x.com/fumowe5">サブアカウント</a></p>
 
         <br>
 
