--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "ja">
     <head>
-        <title>Home</title>
+        <title>ぬほれ</title>
         <meta charset="UTF-8">
     </head>
     <body>
@@ -19,12 +19,15 @@
 
         <h3>リンク</h3>
         <p>Gmail: nuhore191@gmail.com</p>
-        <p>Twitter: <a href="https://x.com/nuhore191">メインのアカウント</a>, <a href="https://x.com/fumowe5">サブアカウント</a></p>
+        <p>Twitter: <a href="https://x.com/nuhore191">メインのアカウント</a>, <a href="https://x.com/fumowe5">サブアカウント</a>.</p>
 
         <br>
 
         <h3>ページ</h3>
 
-        
+        <ul>
+            <li>数学</li>
+            <li>趣味</li>
+        </ul>
     </body>
 </html>
