--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
         <h3>リンク</h3>
         <p>Gmail: nuhore191@gmail.com</p>
-        <p>Twitter: <a href="https://x.com/nuhore191">メインのアカウント</a>, <a href="https://x.com/fumowe5">サブアカウント</a>.</p>
+        <p>Twitter: <a href = "https://x.com/nuhore191">メインのアカウント</a>, <a href = "https://x.com/fumowe5">サブアカウント</a>.</p>
 
         <br>
 
         <h3>ページ</h3>
 
         <ul>
-            <li>数学</li>
+            <li><a href = "math.html"></a></li>
             <li>趣味</li>
         </ul>
     </body>
