--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h3>ページ</h3>
 
         <ul>
-            <li><a href = "math.html"></a></li>
+            <li><a href = "math.html">数学</a></li>
             <li>趣味</li>
         </ul>
     </body>
