--- a/math.html
+++ b/math.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang = "ja">
+    <head>
+        <title>数学</title>
+        <meta charset="UTF-8">
+    </head>
+    <body>
+        <h1>
+            数学
+        </h1>
 
+        <br>
+
+        <h3>ページ</h3>
+
+        <ul>
+            <li><a href = "pdf.html">pdf</a></li>
+            <li>趣味</li>
+        </ul>
+
+      <a href = "index.html">元のページに戻る.</a>
+    </body>
+</html>
