--- a/pdf.html
+++ b/pdf.html
@@ -1,1 +1,30 @@
 
+<!DOCTYPE html>
+<html lang = "ja">
+    <head>
+        <title>pdf</title>
+        <meta charset="UTF-8">
+    </head>
+    <body>
+        <h1>
+            pdf
+        </h1>
+
+        <br>
+
+        <h3>真面目なpdf</h3>
+
+        <p>まだ作っていない.</p>
+
+        <h3>ふざけたpdf</h3>
+
+        <h2>【栞葉るりのゆるゆる数学教室】現代数学の秩序・集合論</h2>
+
+        <a href = "https://drive.google.com/file/d/1ypRZh5EYbF_E3LrSqgT9F7f5typVKfu_/view?usp=drivesdk">pdf</a>
+
+        <p>高校3年生の時に受験が終わってから作った. にじさんじライバーの栞葉るりさんと一緒に集合論の基礎を楽しく学べるpdfとなっている.</p>
+
+        <a href = "index.html">数学のページに戻る.</a>
+        <a href = "index.html">最初のページに戻る.</a>
+    </body>
+</html>
