--- a/pdf.html
+++ b/pdf.html
@@ -24,7 +24,7 @@
 
         <p>　高校3年生の時に受験が終わってから作った. にじさんじライバーの栞葉るりさんと一緒に集合論の基礎を楽しく学べるpdfとなっている.</p>
 
-        <a href = "index.html">数学のページに戻る.</a>
+        <a href = "math.html">数学のページに戻る.</a>
 
         <br>
         
