--- a/pdf.html
+++ b/pdf.html
@@ -18,9 +18,7 @@
 
         <h2>ふざけたpdf</h2>
 
-        <h3>【栞葉るりのゆるゆる数学教室】現代数学の秩序・集合論</h3>
-
-        <a href = "https://drive.google.com/file/d/1ypRZh5EYbF_E3LrSqgT9F7f5typVKfu_/view?usp=drivesdk">pdf</a>
+        <h3>【栞葉るりのゆるゆる数学教室】現代数学の秩序・集合論（<a href = "https://drive.google.com/file/d/1ypRZh5EYbF_E3LrSqgT9F7f5typVKfu_/view?usp=drivesdk">pdf</a>）</h3>
 
         <p>　高校3年生の時に受験が終わってから作った. にじさんじライバーの栞葉るりさんと一緒に集合論の基礎を楽しく学べるpdfとなっている.</p>
 
