--- a/math.html
+++ b/math.html
@@ -14,8 +14,8 @@
         <h3>ページ</h3>
 
         <ul>
-            <li><a href = "pdf.html">pdf</a></li>
-            <li>趣味</li>
+            <li><a href = "pdf.html">作ったpdf</a></li>
+            <li><a href = "mathbook.html">数学書レビュー</a></li>
         </ul>
 
       <a href = "index.html">元のページに戻る.</a>
