--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <ul>
             <li><a href = "math.html">数学</a></li>
-            <li>趣味</li>
+            <li><a href = "hobby.html">趣味</a></li>
         </ul>
     </body>
 </html>
