--- a/mathbook.html
+++ b/mathbook.html
@@ -9,6 +9,7 @@
       <h2>新体系・大学数学 入門の教科書, 芳沢光雄.</h2>
       <p>　高校生のときに本書で勉強していた. 高校生でも理解できるくらいに読みやすく, 大学数学の雰囲気も知れるので, 独学で大学数学を勉強したいと考えている人はまずこの本を買えばよいのではないか. さらにブルーバックスなので上下それぞれ1000円ちょっとで買える.</p>
       
-      <a href = "index.html">元のページに戻る.</a>
+      <a href = "math.html">数学のページに戻る.</a>
+      <a href = "index.html">最初のページに戻る.</a>
     </body>
 </html>
