--- a/book.html
+++ b/book.html
@@ -1,1 +1,12 @@
 
+<!DOCTYPE html>
+<html lang = "ja">
+    <head>
+        <title>タイトル</title>
+        <meta charset="UTF-8">
+    </head>
+    <body>
+
+      <a href = "index.html">元のページに戻る.</a>
+    </body>
+</html>
