--- a/book.html
+++ b/book.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 <html lang = "ja">
     <head>
-        <title>タイトル</title>
+        <title>読んだ本の感想</title>
         <meta charset="UTF-8">
     </head>
     <body>
-
+        <h1>読んだ本の感想</h1>
       <a href = "index.html">元のページに戻る.</a>
     </body>
 </html>
