--- a/book.html
+++ b/book.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>読んだ本の感想</h1>
-      <a href = "index.html">元のページに戻る.</a>
+      <a href = "hobby.html">趣味のページに戻る.</a>
+      <a href = "index.html">最初のページに戻る.</a>
     </body>
 </html>
