--- a/pdf.html
+++ b/pdf.html
@@ -2,12 +2,12 @@
 <!DOCTYPE html>
 <html lang = "ja">
     <head>
-        <title>pdf</title>
+        <title>作ったpdf</title>
         <meta charset="UTF-8">
     </head>
     <body>
         <h1>
-            pdf
+            作ったpdf
         </h1>
 
         <br>
@@ -19,6 +19,12 @@
         <h2>ふざけたpdf</h2>
 
         <h3>【栞葉るりのゆるゆる数学教室】現代数学の秩序・集合論（<a href = "https://drive.google.com/file/d/1ypRZh5EYbF_E3LrSqgT9F7f5typVKfu_/view?usp=drivesdk">pdf</a>）</h3>
+
+        <p>　高校3年生の時に受験が終わってから作った. にじさんじライバーの栞葉るりさんと一緒に集合論の基礎を楽しく学べるpdfとなっている.</p>
+
+        <h3>ビセキのごとく！</h3>
+
+        <p> 三千院ナギが微積分学を教えてくれる. 鋭意製作中.</p>
 
         <p>　高校3年生の時に受験が終わってから作った. にじさんじライバーの栞葉るりさんと一緒に集合論の基礎を楽しく学べるpdfとなっている.</p>
 
