--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <img src = "XJ7FNhDj_400x400.jpg" width =20%>
         
-        <p>　理学部数学科に通っている大学生（B1）です. 数学や音楽, 漫画, アニメ, にじさんじなどが好きです. 上の画像はTikZで作ったものです. 名前はChatGPTに「ランダムに平仮名を3文字並べて」と頼んだら「ぬほれ」が出てきたのでこうなりました.</p>
+        <p>　理学部数学科に通っている大学生（B1）です. 数学や音楽, 漫画, アニメ, にじさんじなどが好きです. 上の画像はTikZで作ったものです. 名前はChatGPTに「ランダムに平仮名を3文字並べて」と頼んだらこうなりました.</p>
         
         <br>
 
