--- a/mathbook.html
+++ b/mathbook.html
@@ -6,6 +6,7 @@
     </head>
     <body>
       <h1>数学書レビュー</h1>
+      <p>　ぼくが読んだ数学書の感想を書いていくページです. 何の数学書を買うか悩んでいるときに参考にしていただければ幸いです.</p>
       <h2>新体系・大学数学 入門の教科書, 芳沢光雄.</h2>
       <p>　高校生のときに本書で勉強していた. 高校生でも理解できるくらいに読みやすく, 大学数学の雰囲気も知れるので, 独学で大学数学を勉強したいと考えている人はまずこの本を買えばよいのではないか. さらにブルーバックスなので上下それぞれ1000円ちょっとで買える.</p>
       
