--- a/index.html
+++ b/index.html
@@ -20,15 +20,13 @@
         <h3>連絡先</h3>
         <p>Gmail: nuhore191@gmail.com</p>
         <p>Twitter: <a href = "https://x.com/nuhore191">メインのアカウント</a>, <a href = "https://x.com/fumowe5">サブアカウント</a>.</p>
-<!--
+
         <br>
 
         <h3>カテゴリ</h3>
 
         <ul>
-            <li><a href = "math.html">数学</a></li>
-            <li><a href = "hobby.html">趣味</a></li>
+            <li><a href = "pdf.html">作ったpdf置き場</a></li>
         </ul>
--->
     </body>
 </html>
