--- a/book.html
+++ b/book.html
@@ -2,11 +2,15 @@
 <!DOCTYPE html>
 <html lang = "ja">
     <head>
-        <title>読んだ本の感想</title>
+        <title>2025 読んだ本</title>
         <meta charset="UTF-8">
     </head>
     <body>
         <h1>読んだ本の感想</h1>
+
+        <h2>数学者の思案 河東泰之</h2>
+
+        <p>数学科生なら誰でも知っているであろう「<a href ="https://www.ms.u-tokyo.ac.jp/~yasuyuki/sem.htm">セミナーの準備のしかたについて</a>」で有名な河東先生のエッセイ。</p>
       <a href = "hobby.html">趣味のページに戻る.</a>
       <a href = "index.html">最初のページに戻る.</a>
     </body>
