--- a/book.html
+++ b/book.html
@@ -6,12 +6,18 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <h1>読んだ本の感想</h1>
+        <h1>読んだ本</h1>
 
         <h2>数学者の思案 河東泰之</h2>
 
-        <p>数学科生なら誰でも知っているであろう「<a href ="https://www.ms.u-tokyo.ac.jp/~yasuyuki/sem.htm">セミナーの準備のしかたについて</a>」で有名な河東先生のエッセイ。</p>
-      <a href = "hobby.html">趣味のページに戻る.</a>
+        <p>　数学科生なら誰でも知っているであろう「<a href ="https://www.ms.u-tokyo.ac.jp/~yasuyuki/sem.htm">セミナーの準備のしかたについて</a>」で有名な河東先生のエッセイ。
+        </p>
+
+        <h2>ミステリ・トランスミッター─謎解きはメッセージの中に</h2>
+
+        <p>　
+        </p>
+
       <a href = "index.html">最初のページに戻る.</a>
     </body>
 </html>
