--- a/book.html
+++ b/book.html
@@ -13,7 +13,7 @@
         <p>　数学科生なら誰でも知っているであろう「<a href ="https://www.ms.u-tokyo.ac.jp/~yasuyuki/sem.htm">セミナーの準備のしかたについて</a>」で有名な河東先生のエッセイ。
         </p>
 
-        <h2>ミステリ・トランスミッター─謎解きはメッセージの中に</h2>
+        <h2>ミステリ・トランスミッター 謎解きはメッセージの中に</h2>
 
         <p>　
         </p>
