--- a/book.html
+++ b/book.html
@@ -15,8 +15,7 @@
 
         <h2>ミステリ・トランスミッター 謎解きはメッセージの中に</h2>
 
-        <p>　「伝える」がテーマの短編集。
-        </p>
+        <p>　「伝える」がテーマの短編集。「さよなら絶望先生」や「かってに改蔵」の最終回が好きな人は読むべき。個人的には最初の作品が好きだった。</p>
 
       <a href = "index.html">最初のページに戻る.</a>
     </body>
