--- a/book.html
+++ b/book.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang = "ja">
     <head>
-        <title>2025 読んだ本</title>
+        <title>読んだ本</title>
         <meta charset="UTF-8">
     </head>
     <body>
