--- a/aboutme.html
+++ b/aboutme.html
@@ -13,12 +13,13 @@
 
         <p>　このホームページは自分の作ったpdfの置き場所が欲しかったので作りました。数学のことや趣味のことなどを雑多に載せていくつもりです。</p>
 
-        <h2>プロフィール</h2>
+        <h2>基本情報</h2>
 
         <ul>
             <li>名前：ぬほれ</li>
             <li>所属：某大学理学部数学科</li>
             <li>性別：男 <del>美少女JKJD</del></li>
+            <li>資格：ありません。無敵です。</li>
         </ul>
       <a href = "index.html">元のページに戻る.</a>
     </body>
