--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <h3>カテゴリ</h3>
 
         <ul>
+            <li><a href = "aboutme.html">自己紹介</a></li>
             <li><a href = "pdf.html">作ったpdf置き場</a></li>
+            <li><a href = "book.html">読んだ本</a></li>
         </ul>
     </body>
 </html>
