--- a/aboutme.html
+++ b/aboutme.html
@@ -20,6 +20,12 @@
             <li>所属：某大学理学部数学科</li>
             <li>性別：男 <del>美少女JKJD</del></li>
             <li>資格：ありません。無敵です。</li>
+
+        <h2>好きなもの</h2>
+
+        <h3>数学</h3>
+
+        <p>それはそう。早瀬走。最近は背伸びして赤雪江を勉強している。</p>
         </ul>
       <a href = "index.html">元のページに戻る.</a>
     </body>
