--- a/book.html
+++ b/book.html
@@ -10,12 +10,12 @@
 
         <h2>数学者の思案 河東泰之</h2>
 
-        <p>　数学科生なら誰でも知っているであろう「<a href ="https://www.ms.u-tokyo.ac.jp/~yasuyuki/sem.htm">セミナーの準備のしかたについて</a>」で有名な河東先生のエッセイ。
-        講義ではプラスマイナス10秒のレベルで時間を守るという話が印象的だった。</p>
+        <p>　数学科生なら誰でも知っているであろう「<a href ="https://www.ms.u-tokyo.ac.jp/~yasuyuki/sem.htm">セミナーの準備のしかたについて</a>」で有名な河東先生のエッセイ.
+        講義ではプラスマイナス10秒のレベルで時間を守るという話が印象的だった.</p>
 
         <h2>ミステリ・トランスミッター 謎解きはメッセージの中に</h2>
 
-        <p>　「伝える」がテーマの短編集。「さよなら絶望先生」や「かってに改蔵」の最終回が好きな人は読むべき。個人的には最初の作品が好きだった。</p>
+        <p>　「伝える」がテーマの短編集. 「さよなら絶望先生」や「かってに改蔵」の最終回が好きな人は読むべき. 個人的には最初の作品が好きだった.</p>
 
       <a href = "index.html">最初のページに戻る.</a>
     </body>
