--- a/aboutme.html
+++ b/aboutme.html
@@ -19,14 +19,21 @@
             <li>名前：ぬほれ</li>
             <li>所属：某大学理学部数学科</li>
             <li>性別：男 <del>美少女JKJD</del></li>
-            <li>資格：ありません。無敵です。</li>
+            <li>資格：ありません. 無敵です. </li>
 
+        </ul>
+            
         <h2>好きなもの</h2>
 
         <h3>数学</h3>
 
-        <p>それはそう。早瀬走。最近は背伸びして赤雪江を勉強している。</p>
-        </ul>
+        <p>最近は背伸びして赤雪江を勉強している.</p>
+
+        <h3>漫画・アニメ</h3>
+
+        <p>今連載している漫画でいうと, 「トニカクカワイイ」, 「ドカ食いダイスキ！　もちづきさん」, 「お兄ちゃんはおしまい！」を追っている.
+        また, 「ガールズ＆パンツァー」や「さよなら絶望先生」, 「ハヤテのごとく！」も好きである.</p>
+        
       <a href = "index.html">元のページに戻る.</a>
     </body>
 </html>
