--- a/aboutme.html
+++ b/aboutme.html
@@ -27,12 +27,17 @@
 
         <h3>数学</h3>
 
-        <p>最近は背伸びして赤雪江を勉強している.</p>
+        <p>　最近は背伸びして赤雪江を勉強している.</p>
 
         <h3>漫画・アニメ</h3>
 
-        <p>今連載している漫画でいうと, 「トニカクカワイイ」, 「ドカ食いダイスキ！　もちづきさん」, 「お兄ちゃんはおしまい！」を追っている.
+        <p>　今連載している漫画でいうと, 「トニカクカワイイ」, 「ドカ食いダイスキ！　もちづきさん」, 「お兄ちゃんはおしまい！」を追っている.
         また, 「ガールズ＆パンツァー」や「さよなら絶望先生」, 「ハヤテのごとく！」も好きである.</p>
+
+        <h3>音楽</h3>
+
+        <p>　聴く方も演奏する方も好きである. デスクトップを買ったら作曲をしてみたいなぁとも思っている.
+        くるりやアジカン, フジファブリックをよく聴いている.</p>
         
       <a href = "index.html">元のページに戻る.</a>
     </body>
