--- a/aboutme.html
+++ b/aboutme.html
@@ -19,7 +19,7 @@
             <li>名前：ぬほれ</li>
             <li>所属：某大学理学部数学科</li>
             <li>性別：男 <del>美少女JKJD</del></li>
-            <li>資格：ありません. 無敵です. </li>
+            <li>資格：ありません. 無敵です. （aa略）</li>
 
         </ul>
             
@@ -38,6 +38,11 @@
 
         <p>　聴く方も演奏する方も好きである. デスクトップを買ったら作曲をしてみたいなぁとも思っている.
         くるりやアジカン, フジファブリックをよく聴いている.</p>
+
+        <h3>読書</h3>
+
+        <p>　小説を読むことが殆ど. 受験期は全くと言って差し支えないほど読んでいなかったが, 最近はたまに読むくらいの頻度まで回復している.
+        好きな小説家は柞刈湯葉, 小川洋子, 斜線堂有紀など.</p>
         
       <a href = "index.html">元のページに戻る.</a>
     </body>
