--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,7 @@
 
         <h2>このホームページについて</h2>
 
-        <p>　このホームページは自分の作ったpdfの置き場所が欲しかったので作りました。数学のことや趣味のことなどを雑多に載せていくつもりです。</p>
+        <p>　このホームページは自分の作ったpdfの置き場所が欲しかったので作りました。数学のことや趣味のことなどを雑多に載せていくつもりです.</p>
 
         <h2>基本情報</h2>
 
