--- a/aboutme.html
+++ b/aboutme.html
@@ -44,7 +44,11 @@
 
         <p>　小説を読むことが殆ど. 受験期は全くと言って差し支えないほど読んでいなかったが, 最近はたまに読むくらいの頻度まで回復している.
         好きな小説家は柞刈湯葉, 小川洋子, 斜線堂有紀など.</p>
-        
+
+        <h3>にじさんじ</h3>
+
+        <p>　よく観るライバーは栞葉るり, 卯月コウ, 周央サンゴなど. 基本的に雑談配信ばかり聴いている.</p>
+    
       <a href = "index.html">元のページに戻る.</a>
     </body>
 </html>
