--- a/book.html
+++ b/book.html
@@ -8,14 +8,16 @@
     <body>
         <h1>読んだ本</h1>
 
-        <h2>数学者の思案 河東泰之</h2>
+        <h2>2025年</h2>
 
-        <p>　数学科生なら誰でも知っているであろう「<a href ="https://www.ms.u-tokyo.ac.jp/~yasuyuki/sem.htm">セミナーの準備のしかたについて</a>」で有名な河東先生のエッセイ.
-        講義ではプラスマイナス10秒のレベルで時間を守るという話が印象的だった.</p>
+        <ul>
 
-        <h2>ミステリ・トランスミッター 謎解きはメッセージの中に</h2>
+            <li>数学者の思案 河東泰之</li>
 
-        <p>　「伝える」がテーマの短編集. 「さよなら絶望先生」や「かってに改蔵」の最終回が好きな人は読むべき. 個人的には最初の作品が好きだった.</p>
+            <li>ミステリ・トランスミッター 謎解きはメッセージの中に 斜線堂有紀</li>
+
+            
+        </ul>
 
       <a href = "index.html">最初のページに戻る.</a>
     </body>
