--- a/aboutme.html
+++ b/aboutme.html
@@ -11,8 +11,8 @@
 
         <h2>このホームページについて</h2>
 
-        <p>　このホームページは自分の作ったpdfの置き場所が欲しかったので作りました.
-            数学のことや趣味のことなどを雑多に載せていくつもりです.</p>
+        <p>　このホームページは自分の作ったpdfの置き場所が欲しかったので作りました．
+            数学のことや趣味のことなどを雑多に載せていくつもりです．</p>
 
         <h2>基本情報</h2>
 
@@ -20,7 +20,8 @@
             <li>名前：ぬほれ</li>
             <li>所属：某大学理学部数学科</li>
             <li>性別：男 <del>美少女JKJD</del></li>
-            <li>資格：ありません. 無敵です. （aa略）</li>
+            <li>年齢：17歳です．（おいおい）</li>
+            <li>資格：ありません．無敵です．（aa略）</li>
 
         </ul>
             
@@ -28,26 +29,26 @@
 
         <h3>数学</h3>
 
-        <p>　最近は背伸びして赤雪江を勉強している.</p>
+        <p>　最近は背伸びして赤雪江や杉浦解析をしています．理解しているとは言っていません．</p>
 
         <h3>漫画・アニメ</h3>
 
-        <p>　今連載している漫画でいうと, 「トニカクカワイイ」, 「ドカ食いダイスキ！　もちづきさん」, 「お兄ちゃんはおしまい！」を追っている.
-        また, 「ガールズ＆パンツァー」や「さよなら絶望先生」, 「ハヤテのごとく！」も好きである.</p>
+        <p>　今連載している漫画でいうと，「トニカクカワイイ」，「ドカ食いダイスキ！　もちづきさん」，「お兄ちゃんはおしまい！」を追っています．
+        また，「ガールズ＆パンツァー」や「さよなら絶望先生」，「ハヤテのごとく！」なども好きです.</p>
 
         <h3>音楽</h3>
 
-        <p>　聴く方も演奏する方も好きである. デスクトップを買ったら作曲をしてみたいなぁとも思っている.
-        くるりやアジカン, フジファブリックをよく聴いている.</p>
+        <p>　聴く方も演奏する方も好きです．デスクトップを買ったら作曲をしてみたいなぁとも思っています．
+        くるりやアジカン，フジファブリックをよく聴いています．</p>
 
         <h3>読書</h3>
 
-        <p>　小説を読むことが殆ど. 受験期は全くと言って差し支えないほど読んでいなかったが, 最近はたまに読むくらいの頻度まで回復している.
-        好きな小説家は柞刈湯葉, 小川洋子, 斜線堂有紀など.</p>
+        <p>　小説を読むことが殆どです. 受験期は全くと言って差し支えないほど読んでいませんでしたが, 最近はたまに読むくらいの頻度まで回復しています．
+        好きな小説家は柞刈湯葉，小川洋子，斜線堂有紀などです．</p>
 
         <h3>にじさんじ</h3>
 
-        <p>　よく観るライバーは栞葉るり, 卯月コウ, 周央サンゴなど. 基本的に雑談配信ばかり聴いている.</p>
+        <p>　よく観るライバーは栞葉るり，卯月コウ，周央サンゴなどで，基本的に雑談配信ばかり聴いています．</p>
     
       <a href = "index.html">元のページに戻る.</a>
     </body>
