--- a/pdf.html
+++ b/pdf.html
@@ -14,12 +14,13 @@
 
         <h3>【栞葉るりのゆるゆる数学教室】現代数学の秩序・集合論（<a href = "https://drive.google.com/file/d/1ypRZh5EYbF_E3LrSqgT9F7f5typVKfu_/view?usp=drivesdk">pdf</a>）</h3>
 
-        <p>　高校3年生の時に受験が終わってから作った. にじさんじライバーの栞葉るりさんと一緒に集合論の基礎を楽しく学べるpdfとなっている.</p>
+        <p>　高校3年生の時に受験が終わってから作った．にじさんじライバーの栞葉るりさんと一緒に集合論の基礎を楽しく学べるpdfとなっている．
+        最近，出来栄えに満足できなくなってきたので改訂版を制作している．</p>
 
         <h3>ビセキのごとく！</h3>
 
-        <p>　三千院ナギが微積分学を教えてくれる. 鋭意製作中.</p>
+        <p>　三千院ナギが微積分学を教えてくれる．鋭意製作中．</p>
         
-        <a href = "index.html">最初のページに戻る.</a>
+        <a href = "index.html">最初のページに戻る．</a>
     </body>
 </html>
