--- a/book.html
+++ b/book.html
@@ -19,6 +19,6 @@
             
         </ul>
 
-      <a href = "index.html">最初のページに戻る.</a>
+      <a href = "index.html">最初のページに戻る．</a>
     </body>
 </html>
