--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
         <img src = "XJ7FNhDj_400x400.jpg" width =20%>
         
-        <p>　理学部数学科に通っている大学生（B1）です. 数学や音楽, 漫画, アニメ, にじさんじなどが好きです. 上の画像はTikZで作ったものです. 名前はChatGPTに「ランダムに平仮名を3文字並べて」と頼んだらこうなりました.</p>
+        <p>　理学部数学科に通っている大学生（B1）です．
+            数学や音楽，漫画，アニメ，にじさんじなどが好きです．
+            上の画像はTikZで作ったものです．
+            名前はChatGPTに「ランダムに平仮名を3文字並べて」と頼んだらこうなりました．</p>
         
         <br>
 
@@ -23,7 +26,7 @@
 
         <br>
 
-        <h3>カテゴリ</h3>
+        <h3>ページ</h3>
 
         <ul>
             <li><a href = "aboutme.html">自己紹介</a></li>
