--- a/book.html
+++ b/book.html
@@ -8,6 +8,10 @@
     <body>
         <h1>読んだ本</h1>
 
+        <h2>概要</h2>
+
+        <p>　僕が読んだ本のタイトルを列挙していくだけのページです．</p>
+        
         <h2>2025年</h2>
 
         <ul>
