--- a/aboutme.html
+++ b/aboutme.html
@@ -3,6 +3,22 @@
     <head>
         <title>自己紹介</title>
         <meta charset="UTF-8">
+        <style type="text/css" media="screen">
+		html {
+			height: 100%;
+			width: 100%;
+			font-size: 62.5%;
+		}
+		body {
+			font-size: 1.4em;
+		}
+		p#vw {
+			font-size: 5vw;
+		}
+		p#vh {
+			font-size: 5vh;
+		}
+	</style>
     </head>
     <body>
         <h1>
