--- a/aboutme.html
+++ b/aboutme.html
@@ -3,6 +3,7 @@
     <head>
         <title>自己紹介</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>
