--- a/book.html
+++ b/book.html
@@ -4,6 +4,7 @@
     <head>
         <title>読んだ本</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>読んだ本</h1>
