--- a/pdf.html
+++ b/pdf.html
@@ -4,6 +4,7 @@
     <head>
         <title>作ったpdf</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>
