--- a/aboutme.html
+++ b/aboutme.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="container">
         <h1>
             自己紹介
         </h1>
@@ -51,6 +52,7 @@
 
         <p>　よく観るライバーは栞葉るり，卯月コウ，周央サンゴなどで，基本的に雑談配信ばかり聴いています．</p>
     
-      <a href = "index.html">元のページに戻る.</a>
+        <a href = "index.html">元のページに戻る.</a>
+        </div>
     </body>
 </html>
