--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="container">
         <h1>
             ぬほれ（nuhore）
         </h1>
@@ -34,5 +35,6 @@
             <li><a href = "pdf.html">作ったpdf置き場</a></li>
             <li><a href = "book.html">読んだ本</a></li>
         </ul>
+        </div>
     </body>
 </html>
