--- a/pdf.html
+++ b/pdf.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="container">
         <h1>
             作ったpdf
         </h1>
@@ -23,5 +24,6 @@
         <p>　三千院ナギが微積分学を教えてくれる．鋭意製作中．</p>
         
         <a href = "index.html">最初のページに戻る．</a>
+        </div>
     </body>
 </html>
