--- a/pdf.html
+++ b/pdf.html
@@ -12,6 +12,11 @@
             作ったpdf
         </h1>
 
+        <h2>はじめに</h2>
+
+        <p>　以下のPDFはすべて素人が書いたものであって，数学的な正しさや厳密性は保証しません．
+        これらはあくまでエンタメとして楽しみ，これらを読んだ後は必ずきちんとした数学書を読んでデトックスしてください．</p>
+
         <h2>一覧</h2>
 
         <h3>【栞葉るりのゆるゆる数学教室】現代数学の秩序・集合論（<a href = "https://drive.google.com/file/d/1ypRZh5EYbF_E3LrSqgT9F7f5typVKfu_/view?usp=drivesdk">pdf</a>）</h3>
