--- a/book.html
+++ b/book.html
@@ -11,6 +11,9 @@
         
             <h1>読んだ本</h1>
 
+            <p>　一応理系ではあるので「読書が好きです」と言うと大抵驚かれるのですが，
+            中学3年生の終わりごろから高校1年生のはじめくらいまでは文学部に行こうと考えていたくらいには読書は好きです．</p>
+
             <h2>概要</h2>
 
             <p>　僕が読んだ本のタイトルを列挙していくだけのページです．</p>
