--- a/book.html
+++ b/book.html
@@ -13,6 +13,8 @@
 
             <p>　一応理系ではあるので「読書が好きです」と言うと大抵驚かれるのですが，
             中学3年生の終わりごろから高校1年生のはじめくらいまでは文学部に行こうと考えていたくらいには読書は好きです．</p>
+            <p>　はじめは本の感想でも書こうかと考えていたのですが，
+                読後の感想が「面白かった」，「わくわくした」，「ドキドキした」くらいしかない人間にそんなものはできませんでした．</p>
 
             <h2>概要</h2>
 
