--- a/aboutme.html
+++ b/aboutme.html
@@ -45,7 +45,7 @@
 
         <h3>読書</h3>
 
-        <p>　小説を読むことが殆どです. 受験期は全くと言って差し支えないほど読んでいませんでしたが, 最近はたまに読むくらいの頻度まで回復しています．
+        <p>　小説を読むことが殆どです．受験期は全くと言って差し支えないほど読んでいませんでしたが，最近はたまに読むくらいの頻度まで回復しています．
         好きな小説家は柞刈湯葉，小川洋子，斜線堂有紀などです．</p>
 
         <h3>にじさんじ</h3>
