--- a/template.html
+++ b/template.html
@@ -3,6 +3,7 @@
     <head>
         <title>タイトル</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
 
