--- a/template.html
+++ b/template.html
@@ -6,7 +6,10 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+      <div class="container">
 
-      <a href = "index.html">元のページに戻る.</a>
+        <a href = "index.html">元のページに戻る.</a>
+
+      </div>
     </body>
 </html>
