--- a/template.html
+++ b/template.html
@@ -8,7 +8,7 @@
     <body>
       <div class="container">
 
-        <a href = "index.html">元のページに戻る.</a>
+        <a href = "index.html">元のページに戻る．</a>
 
       </div>
     </body>
