--- a/doudemo.html
+++ b/doudemo.html
@@ -17,7 +17,7 @@
           <li><a href = "kekkon_kyoku.html">結婚式で流したい曲プレイリスト</a></li>
         </ul>
 
-        <a href = "index.html">元のページに戻る.</a>
+        <a href = "index.html">元のページに戻る．</a>
 
       </div>
     </body>
