--- a/doudemo.html
+++ b/doudemo.html
@@ -14,7 +14,7 @@
         河東先生の方は「講義，講演を時間通りに終わらせるには」をはじめ有用な記事ばかりだが，こちら側は本当にどうでもよいことしか書いていない（タイトルを見れば明らか）．</p>
 
         <ul>
-          <li><a href = "kekkon_kyoku.html">結婚式で流したい曲プレイリスト</a></li>
+          <li><a href = "a.html"></a></li>
         </ul>
 
         <a href = "index.html">元のページに戻る．</a>
