--- a/doudemo.html
+++ b/doudemo.html
@@ -8,10 +8,12 @@
     <body>
       <div class="container">
 
-        <h1>どうでもよい記事</h1>
+        <h1>雑多な記事</h1>
 
-        <p>　河東先生のホームページにある記事と同じタイトルだが，こちらの方がよりどうでもよいという自負がある．
-        河東先生の方は「講義，講演を時間通りに終わらせるには」をはじめ有用な記事ばかりだが，こちら側は本当にどうでもよいことしか書いていない（タイトルを見れば明らか）．</p>
+        <p>
+        　ここは，ジャンルレスに思ったことなどを書いていく場所である．
+          
+        </p>
 
         <ul>
           <li><a href = "a.html"></a></li>
