--- a/yakumono.html
+++ b/yakumono.html
@@ -8,6 +8,16 @@
     <body>
       <div class="container">
 
+        <p>
+          　小説などで使われる，感嘆符や疑問符などの約物（記号）には正しい使い方というものがある．
+        </p>
+
+        <p>
+        　まず，感嘆符や疑問符を使う際には，必ず全角スペースを空けるという決まりがある．
+        例えば，「ソロモンよ！私は帰ってきた！」は誤りで「ソロモンよ！　私は帰ってきた！」が正しい．
+        
+        </p>
+    
         <a href = "index.html">元のページに戻る．</a>
 
       </div>
