--- a/yakumono.html
+++ b/yakumono.html
@@ -15,7 +15,7 @@
         <p>
         　まず，感嘆符や疑問符を使う際には，必ず全角スペースを空けるという決まりがある．
         例えば，「ソロモンよ！私は帰ってきた！」は誤りで「ソロモンよ！　私は帰ってきた！」が正しい．
-        
+        　また，ダッシュ（――）や（）
         </p>
     
         <a href = "index.html">元のページに戻る．</a>
