--- a/yakumono.html
+++ b/yakumono.html
@@ -18,7 +18,8 @@
         　また，ダッシュ（――）や（）
         </p>
     
-        <a href = "index.html">元のページに戻る．</a>
+        <a href = "index.html">最初のページに戻る．</a>
+        <a href = "index.html">雑多な記事のページに戻る．</a>
 
       </div>
     </body>
