--- a/yakumono.html
+++ b/yakumono.html
@@ -15,14 +15,17 @@
         <p>
         　まず，感嘆符や疑問符を使う際には，必ず全角スペースを空けるという決まりがある．
         例えば，「ソロモンよ！私は帰ってきた！」は誤りで「ソロモンよ！　私は帰ってきた！」が正しい．
-        　また，ダッシュ（――）や（）
+        　また，ダッシュ（―）や三点リーダー（…）を使う際には，二つセットで使うという決まりもある．
+        例えば，「初カキコ…ども…」は誤りで，「初カキコ……ども……」が正しい．
+        　気になった人は手元にある小説などで確認してみると良いかもしれない．
+        また，この他にも決まりがあるので調べてみるのも良いのではないだろうか．
         </p>
     
         <a href = "index.html">最初のページに戻る．</a>
 
         <br>
         
-        <a href = "index.html">雑多な記事のページに戻る．</a>
+        <a href = "zatta.html">雑多な記事のページに戻る．</a>
 
       </div>
     </body>
