--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <li><a href = "aboutme.html">自己紹介</a></li>
             <li><a href = "pdf.html">作ったpdf置き場</a></li>
             <li><a href = "book.html">読んだ本</a></li>
+            <li><a href = "daisuu.html">高校生が大学数学して何が悪いんだよ！</a></li>
         </ul>
         </div>
     </body>
