--- a/daisuu.html
+++ b/daisuu.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang = "ja">
     <head>
-        <title>高校生でも大学数学しよう！</title>
+        <title>高校生が大学数学して何が悪いんだよ！</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
       <div class="container">
 
-        <h1>高校生でも大学数学しよう！</h1>
+        <h1>高校生が大学数学して何が悪いんだよ！</h1>
+
+        <h2>はじめに</h2>
+
+        <p>
+        　みなさん，大学数学したいですよね．わかります．
+        </p>
 
         <a href = "index.html">元のページに戻る．</a>
 
