--- a/daisuu.html
+++ b/daisuu.html
@@ -13,7 +13,8 @@
         <h2>はじめに</h2>
 
         <p>
-        　みなさん，大学数学したいですよね．わかります．
+        　これを読んでいる高校生のみなさん，大学数学したいですよね．わかります．
+        今回は，高校生でも大学数学を独学で勉強できるぞ！　という話をしていきます．
         </p>
 
         <a href = "index.html">元のページに戻る．</a>
