--- a/mathbook.html
+++ b/mathbook.html
@@ -11,13 +11,40 @@
         <h1>持っている数学書一覧</h1>
 
         <p>
-          恥の多い生涯を送って来ました．
+        　恥の多い生涯を送って来ました．
         自分には，その本を買ったのかどうか見当がつかないのです．
         『若きウェルテルの悩み』は二冊持っていますし，『鋼の錬金術師』の一巻も二冊持っています．
         『20世紀少年』は単行本で全て持っているのに，三冊だけ完全版を持っています（収集目的ではない）．
         数学書の多くなってきた自分の本棚を見て確信しました．
         何の本を持っているか，一覧にせねばならぬ．
         </p>
+
+        <h2>東京大学出版会</h2>
+
+        <ul>
+            <li>線型代数入門 齋藤正彦</li>
+            <li>解析入門Ⅰ 杉浦光夫</li>
+            <li>集合と位相 斎藤毅</li>
+        </ul>
+
+        <h2>裳華房</h2>
+
+        <ul>
+            <li>手を動かしてまなぶ線形代数 藤岡敦</li>
+            <li>手を動かしてまなぶ微分積分 藤岡敦</li>
+        </ul>
+
+        <h2>日本評論社</h2>
+
+        <ul>
+            <li>代数学1群論入門 雪江明彦</li>
+        </ul>
+
+        <h2>講談社</h2>
+
+        <ul>
+            <li>新体系大学数学入門の教科書上・下 芳沢光雄</li>
+        </ul>
 
         <a href = "index.html">元のページに戻る．</a>
 
