--- a/book.html
+++ b/book.html
@@ -24,6 +24,8 @@
 
                 <li>ミステリ・トランスミッター 謎解きはメッセージの中に 斜線堂有紀</li>
 
+                <li>藍を継ぐ海 伊与原新</li>
+
             
             </ul>
 
