--- a/pdf.html
+++ b/pdf.html
@@ -24,9 +24,9 @@
         <p>　高校3年生の時に受験が終わってから作った．にじさんじライバーの栞葉るりさんと一緒に集合論の基礎を楽しく学べるpdfとなっている．
         最近，出来栄えに満足できなくなってきたので改訂版を制作している．</p>
 
-        <h3>ビセキのごとく！</h3>
+        <h3>ガロワのごとく！</h3>
 
-        <p>　三千院ナギが微積分学を教えてくれる．鋭意製作中．</p>
+        <p>　三千院ナギが代数学を教えてくれる．鋭意製作中．</p>
         
         <a href = "index.html">最初のページに戻る．</a>
         </div>
