--- a/book.html
+++ b/book.html
@@ -20,13 +20,15 @@
 
             <ul>
 
-                <li>数学者の思案 河東泰之</li>
+                <li>数学者の思案，河東泰之．</li>
 
-                <li>ミステリ・トランスミッター 謎解きはメッセージの中に 斜線堂有紀</li>
+                <li>ミステリ・トランスミッター 謎解きはメッセージの中に，斜線堂有紀．</li>
 
-                <li>藍を継ぐ海 伊与原新</li>
+                <li>藍を継ぐ海，伊与原新．</li>
 
-                <li>数学ビギナーズマニュアル 第2版 佐藤文広</li>
+                <li>数学ビギナーズマニュアル 第2版，佐藤文広．</li>
+
+                <li>ソクラテスの弁明 クリトン，プラトン．</li>
             
             </ul>
 
