--- a/aboutme.html
+++ b/aboutme.html
@@ -51,6 +51,15 @@
         <h3>にじさんじ</h3>
 
         <p>　よく観るライバーは栞葉るり，卯月コウ，周央サンゴなどで，基本的に雑談配信ばかり聴いています．</p>
+
+        <h3>ガンダム</h3>
+
+        <p>　確か小学3年生くらいのときにファーストを観たのがBeginningだと思います．
+        一番好きな作品はポケ戦で，好きな機体は，ゴールドスモー，クシャトリヤ，ザクⅡ改，サザビー，ケンプファーです．</p>
+
+        <h2>特技</h2>
+
+        <h3></h3>
     
         <a href = "index.html">元のページに戻る.</a>
         </div>
