--- a/aboutme.html
+++ b/aboutme.html
@@ -54,15 +54,12 @@
 
         <h3>ガンダム</h3>
 
-        <p>　確か小学3年生くらいのときにファーストを観たのがBeginningだと思います．
+        <p>
+        　確か小学3年生くらいのときにファーストを観たのがBeginningだと思います．
         一番好きな作品はポケ戦で，好きな機体は，ゴールドスモー，クシャトリヤ，ザクⅡ改，サザビー，ケンプファーです．
-        言うまでもありませんが，ジオニストです．</p>
-
-        <h2>特技</h2>
-
-        <h3></h3>
-
-        <p>　</p>
+        好きな機体を見れば明らかでが，ジオニストです．
+        
+        </p>
     
         <a href = "index.html">元のページに戻る.</a>
         </div>
