--- a/aboutme.html
+++ b/aboutme.html
@@ -61,7 +61,7 @@
         
         </p>
     
-        <a href = "index.html">元のページに戻る.</a>
+        <a href = "index.html">元のページに戻る．</a>
         </div>
     </body>
 </html>
