--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <h3>連絡先</h3>
         <p>Gmail: nuhore191@gmail.com</p>
-        <p>Twitter: <a href = "https://x.com/nuhore191">メインのアカウント</a>, <a href = "https://x.com/fumowe5">サブアカウント</a>（殆ど動かしていない）.</p>
+        <p>Twitter: <a href = "https://x.com/nuhore191">メインのアカウント</a>，<a href = "https://x.com/fumowe5">サブアカウント</a>（殆ど動かしていない）．</p>
 
         <br>
 
