--- a/forgundambeginner.html
+++ b/forgundambeginner.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang = "ja">
+    <head>
+        <title>初心者向けガンダム講座</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+      <div class="container">
 
+        <h1>初心者向けガンダム講座</h1>
+
+        <h2>はじめに</h2>
+
+        <p>
+        　最近，「機動戦士Gundam GQuuuuuuX」というアニメが放送されています．
+        恐らく，GQuuuuuuXではじめてガンダム作品に触れた人は思うことでしょう．
+        「ガンダム作品多すぎてGQuuuuuuXの次にどれを観たら良いかわからない」と．
+        そこで，ガンダム初心者の人向けに，ガンダム作品の概要と，
+        GQuuuuuuXの次に観るのにおすすめな作品を紹介していきます．
+        <b>君は生き延びることができるか．</b>
+        </p>
+
+        <a href = "index.html">元のページに戻る．</a>
+
+      </div>
+    </body>
+</html>
