--- a/forgundambeginner.html
+++ b/forgundambeginner.html
@@ -18,7 +18,21 @@
         「ガンダム作品多すぎてGQuuuuuuXの次にどれを観たら良いかわからない」と．
         そこで，ガンダム初心者の人向けに，ガンダム作品の概要と，
         GQuuuuuuXの次に観るのにおすすめな作品を紹介していきます．
-        <b>君は生き延びることができるか．</b>
+        </p>
+
+        <h2>ガンダム作品の種類</h2>
+
+        <p>
+        　ガンダム作品には大きく分けて，「宇宙世紀作品」と「アナザー作品」があります．
+        まずは，それぞれの特徴を見ていきましょう．
+        </p>
+
+        <h3>宇宙世紀作品</h3>
+
+        <p>
+        　宇宙世紀作品は，初代「機動戦士ガンダム」と同じ世界線の作品たちのことです．
+        GQuuuuuuXはこれらの作品のパラレルワールドということになっています．
+        つまり，宇宙世紀作品を観ようとすると
         </p>
 
         <a href = "index.html">元のページに戻る．</a>
