--- a/forgundambeginner.html
+++ b/forgundambeginner.html
@@ -32,7 +32,9 @@
         <p>
         　宇宙世紀作品は，初代「機動戦士ガンダム」と同じ世界線の作品たちのことです．
         GQuuuuuuXはこれらの作品のパラレルワールドということになっています．
-        つまり，宇宙世紀作品を観ようとすると
+        つまり，宇宙世紀作品ではストーリーが他の作品と繋がっていて，
+        ある作品を楽しく観るためには他の作品の知識が必要だということが度々起こってしまいます．
+        そのため，宇宙世紀作品を観る際には時系列などに留意する必要があります．
         </p>
 
         <a href = "index.html">元のページに戻る．</a>
