--- a/forgundambeginner.html
+++ b/forgundambeginner.html
@@ -34,7 +34,7 @@
         GQuuuuuuXはこれらの作品のパラレルワールドということになっています．
         つまり，宇宙世紀作品ではストーリーが他の作品と繋がっていて，
         ある作品を楽しく観るためには他の作品の知識が必要だということが度々起こってしまいます．
-        そのため，宇宙世紀作品を観る際には時系列などに留意する必要があります．
+        そのため，宇宙世紀作品を観るときは基本的には時系列順で観ることを推奨します（※例外もあります）．
         </p>
 
         <a href = "index.html">元のページに戻る．</a>
