--- a/forgundambeginner.html
+++ b/forgundambeginner.html
@@ -34,7 +34,13 @@
         GQuuuuuuXはこれらの作品のパラレルワールドということになっています．
         つまり，宇宙世紀作品ではストーリーが他の作品と繋がっていて，
         ある作品を楽しく観るためには他の作品の知識が必要だということが度々起こってしまいます．
-        そのため，宇宙世紀作品を観るときは基本的には時系列順で観ることを推奨します（※例外もあります）．
+        そのため，宇宙世紀作品を観るときは基本的には時系列順で観ることを推奨します（※ところがぎっちょん，例外もあります）．
+        </p>
+
+        <h3>アナザー作品</h3>
+
+        <p>
+        　アナザー作品は，宇宙世紀作品や他のアナザー作品とストーリーが繋がっておらず，その作品だけ単独で観ても問題ないという
         </p>
 
         <a href = "index.html">元のページに戻る．</a>
