--- a/forgundambeginner.html
+++ b/forgundambeginner.html
@@ -40,7 +40,8 @@
         <h3>アナザー作品</h3>
 
         <p>
-        　アナザー作品は，宇宙世紀作品や他のアナザー作品とストーリーが繋がっておらず，その作品だけ単独で観ても問題ないという
+        　アナザー作品は，宇宙世紀作品や他のアナザー作品とストーリーが繋がっておらず，その作品だけ単独で観ても問題ありません．
+        最近でいうと，水星の魔女はまさにアナザー作品です．
         </p>
 
         <a href = "index.html">元のページに戻る．</a>
