--- a/forgundambeginner.html
+++ b/forgundambeginner.html
@@ -42,6 +42,7 @@
         <p>
         　アナザー作品は，宇宙世紀作品や他のアナザー作品とストーリーが繋がっておらず，その作品だけ単独で観ても問題ありません．
         最近でいうと，水星の魔女はまさにアナザー作品です．
+        アナザー作品はストーリーが独立しているので，基本的にどれから観ても楽しめます．
         </p>
 
         <a href = "index.html">元のページに戻る．</a>
