--- a/forgundambeginner.html
+++ b/forgundambeginner.html
@@ -45,6 +45,13 @@
         アナザー作品はストーリーが独立しているので，基本的にどれから観ても楽しめます．
         </p>
 
+        <h3>番外編 ビルドシリーズ</h3>
+
+        <p>
+        　ビルドシリーズとは，簡単に言うと「ガンダムのプラモデル・ガンプラで戦う（これをガンプラバトルという）アニメ」のことです．
+        ビルドシリーズの世界では
+        </p>
+
         <a href = "index.html">元のページに戻る．</a>
 
       </div>
