--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <li><a href = "pdf.html">作ったpdf置き場</a></li>
             <li><a href = "book.html">読んだ本</a></li>
             <li><a href = "mathbook.html">持っている数学書一覧</a></li>
+            <li><a href = "forgundambeginner.html">初心者向けガンダム講座（現在制作中）</li>
         </ul>
         </div>
     </body>
