--- a/forgundambeginner.html
+++ b/forgundambeginner.html
@@ -14,7 +14,7 @@
 
         <p>
         　最近，「機動戦士Gundam GQuuuuuuX」というアニメが放送されています．
-        恐らく，GQuuuuuuXではじめてガンダム作品に触れた人は思うことでしょう．
+        恐らく，GQuuuuuuXではじめてガンダム作品に触れた人は多いことでしょう．
         「ガンダム作品多すぎてGQuuuuuuXの次にどれを観たら良いかわからない」と．
         そこで，ガンダム初心者の人向けに，ガンダム作品の概要と，
         GQuuuuuuXの次に観るのにおすすめな作品を紹介していきます．
