--- a/forgundambeginner.html
+++ b/forgundambeginner.html
@@ -49,7 +49,10 @@
 
         <p>
         　ビルドシリーズとは，簡単に言うと「ガンダムのプラモデル・ガンプラで戦う（これをガンプラバトルという）アニメ」のことです．
-        ビルドシリーズの世界では
+        ビルドシリーズの世界では他のガンダム作品はあくまでアニメ作品ということを考えると，
+        我々の世界に最も近いガンダム作品だといえるのではないでしょうか．
+        ビルドシリーズを観て気に入ったガンプラが出てくる作品を観てみる，という視聴順も良いと思います．
+        これをすると十中八九ガンダムWを視聴することになるとは思いますが（15話が良すぎるんだよなぁ）．
         </p>
 
         <a href = "index.html">元のページに戻る．</a>
