--- a/forgundambeginner.html
+++ b/forgundambeginner.html
@@ -16,8 +16,7 @@
         　最近，「機動戦士Gundam GQuuuuuuX」というアニメが放送されています．
         恐らく，GQuuuuuuXではじめてガンダム作品に触れた人は多いことでしょう．
         「ガンダム作品多すぎてGQuuuuuuXの次にどれを観たら良いかわからない」と．
-        そこで，ガンダム初心者の人向けに，ガンダム作品の概要と，
-        GQuuuuuuXの次に観るのにおすすめな作品を紹介していきます．
+        そこで，ガンダム初心者の人向けにガンダム作品の概要とGQuuuuuuXの次に観るのにおすすめな作品を紹介していきます．
         </p>
 
         <h2>ガンダム作品の種類</h2>
@@ -42,17 +41,38 @@
         <p>
         　アナザー作品は，宇宙世紀作品や他のアナザー作品とストーリーが繋がっておらず，その作品だけ単独で観ても問題ありません．
         最近でいうと，水星の魔女はまさにアナザー作品です．
-        アナザー作品はストーリーが独立しているので，基本的にどれから観ても楽しめます．
+        アナザー作品はストーリーが独立しているので，基本的にどれから観ても楽しめます．こんなに嬉しいことはない．
         </p>
 
         <h3>番外編 ビルドシリーズ</h3>
 
         <p>
         　ビルドシリーズとは，簡単に言うと「ガンダムのプラモデル・ガンプラで戦う（これをガンプラバトルという）アニメ」のことです．
-        ビルドシリーズの世界では他のガンダム作品はあくまでアニメ作品ということを考えると，
-        我々の世界に最も近いガンダム作品だといえるのではないでしょうか．
-        ビルドシリーズを観て気に入ったガンプラが出てくる作品を観てみる，という視聴順も良いと思います．
-        これをすると十中八九ガンダムWを視聴することになるとは思いますが（15話が良すぎるんだよなぁ）．
+        ガンダムを知らなくても楽しめるように作り込まれているので，個人的には初めに観るのであればこれが一番なのではないかと思っています．
+        話の展開が複雑になりがちな他のガンダム作品とは違い，ストーリーがわかりやすいという点も推せます．
+        ビルドシリーズを観て気に入ったガンプラが出てくる作品を観てみる，という視聴の仕方も良いと思います．
+        ただ，ビルドファイターズでこれをすると，十中八九ガンダムWを視聴することになるとは思いますが（15話が良すぎるんだよなぁ）．
+        また，本編に登場したキャラクターと思しき人物が登場することもあるので，
+        ビルドシリーズから観始めなかったとしても一度くらいは観てみてほしいものです．
+        </p>
+
+        <h2>GQuuuuuuXの次に観るならこれ！（宇宙世紀編）</h2>
+
+        <h3>初代・機動戦士ガンダム</h3>
+          
+        <p>　GQuuuuuuXにはファーストガンダムのキャラクターも多く登場していますし，まずはここから観てみるのはどうでしょうか．
+        45年以上経ってもかなりの人気を誇っているわけですから，名作であることには間違いありません．
+        ただし，かなり古い作品なので作画に抵抗を覚える可能性がありますが，
+        少なくともそれを打ち消すくらいにはストーリーが秀逸なので，是非観てほしいものです．
+        全43話ですが，「長いなぁ……」と思う人は，劇場版もありますので是非そちらを
+        （ただし，「ククルス・ドアンの島」などの劇場版ではカットされてしまった回もあるので，TV版もいつかは観てほしいと思います）．</p>
+
+        <h3>機動戦士ガンダム0080 ポケットの中の戦争</h3>
+
+        <p>
+        　この作品はガンダムシリーズ初のOVAで，全6話となっています．
+        米津玄師さんが「ケンプファーという機体が好き」という趣旨の発言をされていましたが，
+        このケンプファーが登場するのが，ポケ戦です．
         </p>
 
         <a href = "index.html">元のページに戻る．</a>
