--- a/forgundambeginner.html
+++ b/forgundambeginner.html
@@ -73,6 +73,10 @@
         　この作品はガンダムシリーズ初のOVAで，全6話となっています．
         米津玄師さんが「ケンプファーという機体が好き」という趣旨の発言をされていましたが，
         このケンプファーが登場するのが，ポケ戦です．
+        全6話で観やすいという点に加え，ストーリーも複雑でない，他の作品を知らなくても楽しめる，
+        主人公の声優が声変わり前に浪川大輔さんであること，ストーリーがあまりに良すぎるなど，
+        おすすめポイントを挙げれば枚挙に暇がありませんが，確実に心に残る作品になるので何が何でも観てください．
+        絶対に観てください．
         </p>
 
         <a href = "index.html">元のページに戻る．</a>
