--- a/forgundambeginner.html
+++ b/forgundambeginner.html
@@ -14,7 +14,7 @@
 
         <p>
         　最近，「機動戦士Gundam GQuuuuuuX」というアニメが放送されています．
-        恐らく，GQuuuuuuXではじめてガンダム作品に触れた人は多いことでしょう．
+        恐らく，GQuuuuuuXではじめてガンダム作品に触れた人は思うことでしょう．
         「ガンダム作品多すぎてGQuuuuuuXの次にどれを観たら良いかわからない」と．
         そこで，ガンダム初心者の人向けにガンダム作品の概要とGQuuuuuuXの次に観るのにおすすめな作品を紹介していきます．
         </p>
