--- a/forgundambeginner.html
+++ b/forgundambeginner.html
@@ -76,7 +76,8 @@
         全6話で観やすいという点に加え，ストーリーも複雑でない，他の作品を知らなくても楽しめる，
         主人公の声優が声変わり前に浪川大輔さんであること，ストーリーがあまりに良すぎるなど，
         おすすめポイントを挙げれば枚挙に暇がありませんが，確実に心に残る作品になるので何が何でも観てください．
-        絶対に観てください．
+        時系列としては，ファーストガンダムと同じ時期の作品となっているので，
+        ファーストを観た後に「もっと一年戦争について詳しく知りたい」というモチベーションで観てみるというのも良いと思います．
         </p>
 
         <a href = "index.html">元のページに戻る．</a>
