--- a/forgundambeginner.html
+++ b/forgundambeginner.html
@@ -80,6 +80,12 @@
         ファーストを観た後に「もっと一年戦争について詳しく知りたい」というモチベーションで観てみるというのも良いと思います．
         </p>
 
+        <h3>機動戦士ガンダム 第08MS小隊</h3>
+
+        <p>
+        　この作品もOVAで，全11話となっています．
+        </p>
+
         <a href = "index.html">元のページに戻る．</a>
 
       </div>
