--- a/book.html
+++ b/book.html
@@ -20,6 +20,8 @@
 
             <ul>
 
+                <li>科学者はなぜ神を信じるのか コペルニクスからホーキングまで，三田一郎．</li>
+
                 <li>数学者の思案，河東泰之．</li>
 
                 <li>ミステリ・トランスミッター 謎解きはメッセージの中に，斜線堂有紀．</li>
@@ -29,6 +31,8 @@
                 <li>数学ビギナーズマニュアル 第2版，佐藤文広．</li>
 
                 <li>ソクラテスの弁明 クリトン，プラトン．</li>
+
+                <li>日本の思想，丸山真男．</li>
             
             </ul>
 
