--- a/forgundambeginner.html
+++ b/forgundambeginner.html
@@ -13,79 +13,15 @@
         <h2>はじめに</h2>
 
         <p>
-        　最近，「機動戦士Gundam GQuuuuuuX」というアニメが放送されています．
-        恐らく，GQuuuuuuXではじめてガンダム作品に触れた人は思うことでしょう．
-        「ガンダム作品多すぎてGQuuuuuuXの次にどれを観たら良いかわからない」と．
-        そこで，ガンダム初心者の人向けにガンダム作品の概要とGQuuuuuuXの次に観るのにおすすめな作品を紹介していきます．
+            　2025年5月現在，「機動戦士Gundam GQuuuuuuX」が放送され，
+            全世界でガンダム作品に興味をもった人が宇宙に移民させる必要があるくらいには増えたはずです．
+            ところがぎっちょん，ガンダム作品はガンダムXで落とされたコロニーの数並みに多く，
+            「次は何を観れば良い？　オルガ」と思っている人が殆どではないでしょうか．
+            そこで，そういった人たちに向けて，ガンダム作品にはどういったものがあるのかということ，
+            そしてGQuuuuuuXの次に観るのにおすすめな作品について語っていこうと思います．
+            それでは，<ruby> 決心解放 <rp>(</rp><rt>フィックス・リリース</rt><rp>)</rp> </ruby>．
         </p>
-
-        <h2>ガンダム作品の種類</h2>
-
-        <p>
-        　ガンダム作品には大きく分けて，「宇宙世紀作品」と「アナザー作品」があります．
-        まずは，それぞれの特徴を見ていきましょう．
-        </p>
-
-        <h3>宇宙世紀作品</h3>
-
-        <p>
-        　宇宙世紀作品は，初代「機動戦士ガンダム」と同じ世界線の作品たちのことです．
-        GQuuuuuuXはこれらの作品のパラレルワールドということになっています．
-        つまり，宇宙世紀作品ではストーリーが他の作品と繋がっていて，
-        ある作品を楽しく観るためには他の作品の知識が必要だということが度々起こってしまいます．
-        そのため，宇宙世紀作品を観るときは基本的には時系列順で観ることを推奨します（※ところがぎっちょん，例外もあります）．
-        </p>
-
-        <h3>アナザー作品</h3>
-
-        <p>
-        　アナザー作品は，宇宙世紀作品や他のアナザー作品とストーリーが繋がっておらず，その作品だけ単独で観ても問題ありません．
-        最近でいうと，水星の魔女はまさにアナザー作品です．
-        アナザー作品はストーリーが独立しているので，基本的にどれから観ても楽しめます．こんなに嬉しいことはない．
-        </p>
-
-        <h3>番外編 ビルドシリーズ</h3>
-
-        <p>
-        　ビルドシリーズとは，簡単に言うと「ガンダムのプラモデル・ガンプラで戦う（これをガンプラバトルという）アニメ」のことです．
-        ガンダムを知らなくても楽しめるように作り込まれているので，個人的には初めに観るのであればこれが一番なのではないかと思っています．
-        話の展開が複雑になりがちな他のガンダム作品とは違い，ストーリーがわかりやすいという点も推せます．
-        ビルドシリーズを観て気に入ったガンプラが出てくる作品を観てみる，という視聴の仕方も良いと思います．
-        ただ，ビルドファイターズでこれをすると，十中八九ガンダムWを視聴することになるとは思いますが（15話が良すぎるんだよなぁ）．
-        また，本編に登場したキャラクターと思しき人物が登場することもあるので，
-        ビルドシリーズから観始めなかったとしても一度くらいは観てみてほしいものです．
-        </p>
-
-        <h2>GQuuuuuuXの次に観るならこれ！（宇宙世紀編）</h2>
-
-        <h3>初代・機動戦士ガンダム</h3>
-          
-        <p>　GQuuuuuuXにはファーストガンダムのキャラクターも多く登場していますし，まずはここから観てみるのはどうでしょうか．
-        45年以上経ってもかなりの人気を誇っているわけですから，名作であることには間違いありません．
-        ただし，かなり古い作品なので作画に抵抗を覚える可能性がありますが，
-        少なくともそれを打ち消すくらいにはストーリーが秀逸なので，是非観てほしいものです．
-        全43話ですが，「長いなぁ……」と思う人は，劇場版もありますので是非そちらを
-        （ただし，「ククルス・ドアンの島」などの劇場版ではカットされてしまった回もあるので，TV版もいつかは観てほしいと思います）．</p>
-
-        <h3>機動戦士ガンダム0080 ポケットの中の戦争</h3>
-
-        <p>
-        　この作品はガンダムシリーズ初のOVAで，全6話となっています．
-        米津玄師さんが「ケンプファーという機体が好き」という趣旨の発言をされていましたが，
-        このケンプファーが登場するのが，ポケ戦です．
-        全6話で観やすいという点に加え，ストーリーも複雑でない，他の作品を知らなくても楽しめる，
-        主人公の声優が声変わり前に浪川大輔さんであること，ストーリーがあまりに良すぎるなど，
-        おすすめポイントを挙げれば枚挙に暇がありませんが，確実に心に残る作品になるので何が何でも観てください．
-        時系列としては，ファーストガンダムと同じ時期の作品となっているので，
-        ファーストを観た後に「もっと一年戦争について詳しく知りたい」というモチベーションで観てみるというのも良いと思います．
-        </p>
-
-        <h3>機動戦士ガンダム 第08MS小隊</h3>
-
-        <p>
-        　この作品もOVAで，全11話となっています．
-        </p>
-
+        
         <a href = "index.html">元のページに戻る．</a>
 
       </div>
