--- a/forgundambeginner.html
+++ b/forgundambeginner.html
@@ -19,7 +19,7 @@
             「次は何を観れば良い？　オルガ」と思っている人が殆どではないでしょうか．
             そこで，そういった人たちに向けて，ガンダム作品にはどういったものがあるのかということ，
             そしてGQuuuuuuXの次に観るのにおすすめな作品について語っていこうと思います．
-            それでは，<ruby> 決心解放 <rp>(</rp><rt>フィックス・リリース</rt><rp>)</rp> </ruby>．
+            狙い撃つぜ！！
         </p>
         
         <a href = "index.html">元のページに戻る．</a>
