--- a/forgundambeginner.html
+++ b/forgundambeginner.html
@@ -21,6 +21,30 @@
             そしてGQuuuuuuXの次に観るのにおすすめな作品について語っていこうと思います．
             狙い撃つぜ！！
         </p>
+
+        <h2>ガンダム作品の種類</h2>
+
+        <p>
+            　ガンダム作品には，作中の暦が「宇宙世紀」のものとそうでないものがあります．
+            つまり，暦が宇宙世紀である作品同士はストーリーが繋がっているわけです．
+            ここではわかりやすいように，ガンダム作品を宇宙世紀シリーズとアナザーシリーズ
+            （つまり，宇宙世紀シリーズでない作品たち）の二つに分けて説明します．
+        </p>
+
+        <h3>宇宙世紀シリーズ</h3>
+
+        <p>
+            　宇宙世紀シリーズは先述の通り作品同士のストーリーが繋がっているため，
+            視聴順には細心の注意を払う必要があります．
+            ただし，基本的には時系列順に観ていけば問題ありません．
+            宇宙世紀シリーズの視聴順に関しては後で詳しく語ります．
+        </p>
+
+        <h3>アナザーシリーズ</h3>
+
+        <p>
+            アナザーシリーズの大体は他の作品とストーリーが繋がっていないので，
+        </p>
         
         <a href = "index.html">元のページに戻る．</a>
 
