--- a/forgundambeginner.html
+++ b/forgundambeginner.html
@@ -19,7 +19,6 @@
             「次は何を観れば良い？　オルガ」と思っている人が殆どではないでしょうか．
             そこで，そういった人たちに向けて，ガンダム作品にはどういったものがあるのかということ，
             そしてGQuuuuuuXの次に観るのにおすすめな作品について語っていこうと思います．
-            狙い撃つぜ！！
         </p>
 
         <h2>ガンダム作品の種類</h2>
@@ -39,13 +38,27 @@
             ただし，基本的には時系列順に観ていけば問題ありません．
             宇宙世紀シリーズの視聴順に関しては後で詳しく語ります．
         </p>
+        <p>
+            　なお，GQuuuuuuXも宇宙世紀作品ですね．
+            シャリア・ブルをはじめとして，ガノタにはお馴染みのキャラクターが多数登場しています．
+        </p>
 
         <h3>アナザーシリーズ</h3>
 
         <p>
-            アナザーシリーズの大体は他の作品とストーリーが繋がっていないので，
+            　アナザーシリーズの大体は他の作品とストーリーが繋がっていないので，どの作品から観ても問題ないです．
+            最近の作品では，水星の魔女もアナザーガンダムですね．
+            アナザーシリーズは世界観がバラバラで，ガンダムの定義が違ったり情勢が全く違ったりします
+            （例えば，宇宙世紀作品では宇宙に住む人が地球に住む人に差別されていますが，アナザーではこの力関係が逆である作品もあります）．
+            またビルドシリーズといって，ガンプラでバトルをする作品もあります．
         </p>
-        
+
+        <h2>GQuuuuuuXの次にはこれを観てほしい（宇宙世紀編）</h2>
+
+        <p>
+            　GQuuuuuuXは
+        </p>
+          
         <a href = "index.html">元のページに戻る．</a>
 
       </div>
